--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">YuchDroid</string>
-    <string name="title_debug_info">Debug Info</string>
+    <string name="title_debug_info">Debug</string>
     <string name="title_mail">YuchDroid Mail</string>
     
     <string name="debug_info_no_info">Opps! No debug information.</string>
@@ -15,8 +15,8 @@
     <string name="login_connect_deamon_state_connect">Connection OK!</string>
     <string name="login_connect_deamon_state_connecting">Connecting...</string>
     <string name="login_connect_deamon_state_disconnect">User Disconnect.</string>
-    <string name="start_svr_but">Start Service</string>
-    <string name="stop_svr_but">Stop Service</string>
+    <string name="start_svr_but">Connect</string>
+    <string name="stop_svr_but">Disconnect</string>
     <string name="login_host">Host:</string>
     <string name="login_host_hint">Domain or IP address</string>
     <string name="login_host_error_prompt">Please input right Host (Domain or IP address)</string>
@@ -30,7 +30,6 @@
     <string name="login_state_connecting">Connecting...</string>
     <string name="login_state_connected">Connected.</string>
     <string name="login_menu_setting">Settings</string>
-    <string name="login_menu_home">Home</string>
     <string name="login_menu_about">About</string>
     
     
@@ -81,6 +80,8 @@
     <string name="mail_time_day"></string>
     <string name="mail_list_compose_new_mail">Compose</string>
     <string name="mail_home_empty_group">Opps, there is not any mail...</string>
+    <string name="mail_list_menu_connect_state">State</string>
+    
     
        
     <!-- mail open view -->
