--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -26,9 +26,9 @@
     <string name="login_user_pass">UserPass:</string>
     <string name="login_user_pass_hint">User define password</string>
     <string name="login_user_pass_error_prompt">Please input UserPass</string>
-    <string name="login_state_disconnect">Disconnect.</string>
-    <string name="login_state_connecting">Connecting...</string>
-    <string name="login_state_connected">Connected.</string>
+    <string name="login_state_disconnect">Current State: Disconnect.</string>
+    <string name="login_state_connecting">Current State: Connecting...</string>
+    <string name="login_state_connected">Current State: Connected.</string>
     <string name="login_menu_setting">Settings</string>
     <string name="login_menu_about">About</string>
     
@@ -97,6 +97,8 @@
     <string name="mail_open_resend_need_connectDeamon_prompt">Can\'t resend until start connect with server.</string>
     <string name="mail_open_delete_prompt">Are you sure delete this mail group?</string>
     <string name="mail_open_reference_line_replace">Click to display original reference part</string>
+    <string name="mail_open_detail_from">From</string>
+    <string name="mail_open_detail_to">To</string>
     
     <!-- mail compose view -->
     <string name="mail_compose_title">YuchDroid Mail Compose</string>
