--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -28,9 +28,9 @@
     <string name="login_user_pass">用户密码:</string>
     <string name="login_user_pass_hint">用户定义的密码</string>
     <string name="login_user_pass_error_prompt">请输入用户密码</string>
-    <string name="login_state_disconnect">当前状态：断开连接</string>
-    <string name="login_state_connecting">当前状态：连接中...</string>
-    <string name="login_state_connected">当前状态：连接成功</string>
+    <string name="login_state_disconnect">断开连接</string>
+    <string name="login_state_connecting">连接中...</string>
+    <string name="login_state_connected">连接成功</string>
     <string name="login_menu_setting">连接设置</string>
     <string name="login_menu_home">内容主界面</string>
     <string name="login_menu_about">关于</string>
@@ -104,6 +104,7 @@
     <string name="mail_open_detail_from">来自</string>
     <string name="mail_open_detail_to">收件人</string>
     <string name="mail_open_detail_email_click_prompt">选择发送程序：</string>
+    <string name="mail_open_attach_prompt">附件操作这个版本尚未实现</string>
     
     <!-- mail compose view -->
     <string name="mail_compose_title">语盒邮件撰写</string>
