--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -12,7 +12,8 @@
     <string name="debug_info_menu_help">帮助</string>
     
     <!-- login activity -->
-    <string name="login_connect_deamon_state">连接服务开启！</string>
+    <string name="login_connect_deamon_state">语盒连接服务通知</string>
+    <string name="login_connect_deamon_state_detail">显示状态可以在语盒连接界面中配置</string>
     <string name="login_connect_deamon_state_connect">连接正常</string>
     <string name="login_connect_deamon_state_connecting">连接断开，正在连接...</string>
     <string name="login_connect_deamon_state_disconnect">用户断开连接</string>
@@ -66,6 +67,10 @@
     <string name="login_pref_statistics_down">下载：</string>
     <string name="login_pref_statistics_total">总计：</string>  
     <string name="login_pref_statistics_clear_prompt">你真的想要清除统计么？</string>
+    <string name="login_pref_prompt_always_display_state">显示连接状态</string>
+    <string name="login_pref_prompt_always_display_state_sum_on">在通知栏一直显示连接状态</string>
+    <string name="login_pref_prompt_always_display_state_sum_off">只在连接断开时才在通知栏显示</string>
+    
     
     
     <!-- dialog relation -->
