--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -11,10 +11,12 @@
     <string name="debug_info_menu_help">Help</string>
         
     <!-- login activity -->
-    <string name="login_connect_deamon_state">Connection Service Started!</string>
+    <string name="login_connect_deamon_state">YuchDroid Connection Notification</string>
+    <string name="login_connect_deamon_state_detail">Can set display state in General Preference</string>
     <string name="login_connect_deamon_state_connect">Connection OK!</string>
     <string name="login_connect_deamon_state_connecting">Connecting...</string>
     <string name="login_connect_deamon_state_disconnect">User Disconnect.</string>
+    
     <string name="start_svr_but">Connect</string>
     <string name="stop_svr_but">Disconnect</string>
     <string name="login_host">Host:</string>
@@ -29,7 +31,7 @@
     <string name="login_state_disconnect">Disconnect.</string>
     <string name="login_state_connecting">Connecting...</string>
     <string name="login_state_connected">Connected.</string>
-    <string name="login_menu_setting">Settings</string>
+    <string name="login_menu_setting">Preference</string>
     <string name="login_menu_about">About</string>
     
     
@@ -64,7 +66,10 @@
     <string name="login_pref_statistics_down">Download:</string>
     <string name="login_pref_statistics_total">Total:</string>
     <string name="login_pref_statistics_clear_prompt">Are you sure to clear this statistics?</string>
-        
+    <string name="login_pref_prompt_always_display_state">Always Display State</string>
+    <string name="login_pref_prompt_always_display_state_sum_on">Always display connect state in the notification bar</string>
+    <string name="login_pref_prompt_always_display_state_sum_off">Display state only disconncet in the notifcation bar</string>
+         
     <!-- dialog relation -->
     <string name="dlg_info_title">YuchDroid Prompt:</string>
     <string name="dlg_info_confirm">I know it</string>
