--- a/yuchdroid16/res/values/strings.xml
+++ b/yuchdroid16/res/values/strings.xml
@@ -113,6 +113,7 @@
     <string name="mail_open_attach_prompt_has_download">There is a attachment downloading</string>
     <string name="mail_open_attach_prompt">Start download attachment</string>
     <string name="mail_open_attach_cancel_btn">Cancel Download</string>
+    <string name="mail_open_attach_open_btn">Open</string>
     <string name="mail_open_attach_cancel_btn_prompt">Are you sure stop downloading?</string>
     
     
