--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -112,6 +112,8 @@
     <string name="mail_open_reference_line_replace">点击显示邮件引用部分</string>
     <string name="mail_open_detail_from">来自</string>
     <string name="mail_open_detail_to">收件人</string>
+    <string name="mail_open_detail_cc">抄送</string>
+    <string name="mail_open_detail_bcc">密送</string>
     <string name="mail_open_detail_email_click_prompt">选择发送程序：</string>
     <string name="mail_open_attach_prompt_disconnect">不能在断开时下载附件</string>
     <string name="mail_open_attach_prompt_has_download">已经有一个附件正在下载了</string>
