--- a/yuchdroid16/res/values-zh/strings.xml
+++ b/yuchdroid16/res/values-zh/strings.xml
@@ -19,6 +19,7 @@
     <string name="login_connect_deamon_state_connect">连接正常</string>
     <string name="login_connect_deamon_state_connecting">连接断开，正在连接...</string>
     <string name="login_connect_deamon_state_disconnect">用户断开连接</string>
+    <string name="login_connect_deamon_state_disconnect_detail">请等待一会儿（一个语盒心跳周期），会自动退出释放内存...</string>
     
     <string name="start_svr_but">开始连接</string>
     <string name="stop_svr_but">停止连接</string>
